syntax = "proto3";

package vacation.hotel;

import "shared/data_types/common.proto";

// ===== REQUEST =====

message HotelSearchRequest {
  vacation.common.Location location = 1;
  vacation.common.DateRange dates = 2;
  int32 guests = 3;
  int32 rooms = 4;
  repeated vacation.common.PreferenceType preferences = 5;
  
  // Filters
  int32 max_results = 6;
  double max_price_per_night = 7;
  double min_rating = 8;  // 0-5 scale
  repeated int32 amenities = 9;  // wifi, pool, gym, etc.
}

// ===== RESPONSE =====

message HotelSearchResponse {
  repeated HotelOption options = 1;
  SearchMetadata metadata = 2;
}

message HotelOption {
  string id = 1;
  
  // Basic info
  string name = 2;
  string description = 3;
  vacation.common.Location location = 4;
  double distance_to_center_km = 5;
  
  // Rating
  double rating = 6;  // 0-5 scale
  int32 review_count = 7;
  string rating_category = 8;  // e.g., "Excellent", "Very Good"
  
  // Pricing
  vacation.common.Money price_per_night = 9;
  vacation.common.Money total_price = 10;
  repeated Fee additional_fees = 11;
  
  // Room details
  RoomInfo room = 12;
  
  // Hotel features
  repeated string amenities = 13;
  string category = 14;  // budget, midscale, upscale, luxury
  int32 star_rating = 15;  // 1-5 stars
  
  // Scores
  vacation.common.ComponentScores scores = 16;
  
  // Booking
  string booking_url = 17;
  string provider = 18;
  bool available = 19;
}

message RoomInfo {
  string type = 1;  // standard, deluxe, suite, etc.
  int32 beds = 2;
  string bed_type = 3;  // king, queen, twin, etc.
  int32 max_occupancy = 4;
  double size_sqm = 5;
  repeated string features = 6;  // balcony, view, etc.
}

message Fee {
  string name = 1;  // resort fee, parking, etc.
  vacation.common.Money amount = 2;
  bool mandatory = 3;
}

message SearchMetadata {
  int32 total_results = 1;
  string search_id = 2;
  string timestamp = 3;
  string data_source = 4;
}
